bk_ida/gccida/g2/gen_subprogram_die
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10660:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v19; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10663:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v22; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10671:1: error: must use 'enum' tag to refer to type 'dwarf_tag'
dwarf_tag die_tag; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10688:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v47; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10690:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v49; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10697:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10707:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10708:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v67; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10717:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v76; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10736:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v95; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10744:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10840:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10913:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:10991:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 10210, "gen_subprogram_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:11063:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9459, "add_abstract_origin_attribute"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:11064:43: error: member reference base type 'dw_die_ref' (aka 'struct die_struct *') is not a structure or union
v69 = ( tree)*( ( _QWORD *)&decl_die_table->die_tag + v73); 
                            ~~~~~~~~~~~~~~^ ~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:11099:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:11135:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/dwarf2out.c:11157:58: error: member reference base type 'dw_die_ref' (aka 'struct die_struct *') is not a structure or union
v6 = (  struct die_struct *)*( ( _QWORD *)&decl_die_table->die_tag + uid); 
                                           ~~~~~~~~~~~~~~^ ~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subprogram_die/src/obj/dwarf2out.o] Error 1
